# agentic-health-hackathon

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTINUITY.md  Learnings.md  README.md  Tracker.md  pyproject.toml  streamlit_app.py
6_11_hackathon/: weighted_keyword_explorer.html
backend/: shared_db.py
backend/search_api/: app.py  chatbot.py  comorbidity.py  drug_classes.json  drug_logit_coefficients.csv  drug_logit_models.json  evidence.py  litsearch.py  models.py  predict.py  service.py
docs/: CHATBOT_SCOPE.md  CODEBOOK.md  DATASET.md  PRIVACY.md  field_dictionary.csv
docs/architecture/: 0001-journal-lookup-service.md
frontend/: chat.js  explorer.html  litsearch.js  subtype_explorer_prototype.html  treatment_predictor.html  weighted_keyword_explorer.html
scripts/: app.py  clean_encode.py  extract_persons.py  knn_sanity.py  pooled_rerun.py  rerun_filtered.py  similarity.py  treatment_heterogeneity.py  treatment_logit_predictive.py  treatment_logit_rerun.py  treatment_pooled_model.py  treatment_spectrum_models.py  verbosity_control.py
src/agentic_health_hackathon/: __init__.py  constants.py  logging_utils.py
src/agentic_health_hackathon/chatbot/: __init__.py  agent.py  cli.py  runtime.py  tools.py
src/agentic_health_hackathon/chatbot/brain/: __init__.py  brain.json  builder.py  prompts.py
src/agentic_health_hackathon/journal_lookup/: __init__.py  cli.py  config.py  lexicon.py  models.py  presenter.py  query_planner.py  service.py  summarizer.py
src/agentic_health_hackathon/journal_lookup/clients/: base.py  crossref.py  europe_pmc.py  openalex.py  pubmed.py
src/agentic_health_hackathon/journal_lookup/resources/: __init__.py  concepts.json  evidence_summary.md  interventions.json
src/agentic_health_hackathon/shared_decision/: __init__.py  cli.py  logit.py  models.py  orchestrator.py  safety.py  stepping.py
tests/: test_models.py  test_presenter.py  test_query_planner.py  test_service.py  test_shared_decision.py  test_summarizer.py
