[project]
name = "agentic-health-hackathon"
version = "0.1.0"
description = "PatientPunk weighted keyword explorer with FastAPI backend and static frontend."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.128.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["backend", "backend.search_api"]

[tool.uvicorn]
factory = false
