[project]
name = "agentic-health-hackathon"
version = "0.1.0"
description = "PatientPunk weighted keyword explorer with FastAPI backend and static frontend."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.128.0",
  "httpx>=0.28.1,<0.29",
  "pydantic>=2.11.0,<3",
  "rich>=14.0.0,<15",
  "rumi",
  "streamlit>=1.46.0,<2",
  "typer>=0.16.0,<0.17",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.16.0,<2",
  "pytest>=8.4.0,<9",
  "pytest-cov>=6.2.0,<7",
  "ruff>=0.12.0,<0.13",
]

[project.scripts]
journal-lookup = "agentic_health_hackathon.journal_lookup.cli:app"
shared-decision = "agentic_health_hackathon.shared_decision.cli:app"
shared-decision-chat = "agentic_health_hackathon.chatbot.cli:app"

[tool.uv.sources]
rumi = { git = "https://github.com/cjleemesotes/Rumi.git", rev = "v0.1.0" }

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["agentic_health_hackathon*", "backend*"]

[tool.setuptools.package-data]
"agentic_health_hackathon.chatbot" = ["brain/*.json"]

[tool.uvicorn]
factory = false

[tool.pytest.ini_options]
addopts = "-q --cov=agentic_health_hackathon --cov-report=term-missing --cov-fail-under=60"
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["backend", "scripts"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "N",
  "ANN",
]
ignore = [
  "ANN401",
]

[tool.mypy]
python_version = "3.11"
packages = ["agentic_health_hackathon"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
plugins = []
